branches/9.18.26/doc/arm/security.inc.rst
.. Copyright (C) Internet Systems Consortium, Inc. ("ISC")
..
.. SPDX-License-Identifier: MPL-2.0
..
.. This Source Code Form is subject to the terms of the Mozilla Public
.. License, v. 2.0.  If a copy of the MPL was not distributed with this
.. file, you can obtain one at https://mozilla.org/MPL/2.0/.
..
.. See the COPYRIGHT file distributed with this work for additional
.. information regarding copyright ownership.

.. _security:

安全配置
========

安全假设
--------
BIND 9的设计假设仅限于对信任方才能访问下列对象。一个不正确的部署，它不遵守
本节所定的规则，不能作为CVE分配或特殊安全敏感问题处理的基础。

未授权访问可能泄漏敏感数据，延缓服务器操作等等。未授权、出乎意外或不正确地
写所列对象可能导致崩溃，错误地数据处理或损坏。

- 所有存储在磁盘上的文件 - 包括区文件，配置文件，密钥文件，临时文件等等。
- 客户端使用已配置的密钥通过 :any:`controls` 套接字通信。
- 未受信任的客户端访问 :any:`statistics-channels`
- 套接字用于 :any:`update-policy` 的 `external` 类型

DNS协议的某些方面仍未规范，例如，对来自不完全遵循DNS协议的DNS服务器的响应的
处理。针对这种情况，BIND实现了自己的安全性检查和限制，并遵从于协议和部署进
化的变化。

权威服务器
~~~~~~~~~~
默认情况下，区有意使用宽松的限制（无限大小、较长的传输超时等）。这些默认值
可能被数据源（区传输或更新）滥用，从而耗尽接收端的资源。

通过使用在 :ref:`server_resource_limits` 和 :ref:`zone_transfers` 节所列的
配置选项，恶意区修改的影响在某种程度上是可以限制的。限制也可应用在哪些恶意
客户端可能被授权使用 :ref:`dynamic_update` 的区上。

DNS解析器
~~~~~~~~~
明显地，DNS解析器充当流量放大器；在普通运行时，一个DNS解析器能够合法的生成
比入向流量更多的出向流量（以包或字节计算），前者触发了后者。DNS协议规范当前
不对这个放大指定限制，但BIND实现了自己的限制，以平衡互操作性和安全。作为一
个通常的规则，如果针对任意给定场景，一个流量放大因子小于100个包，ISC不会将
给定场景作为一个安全问题对待。这些限制服从于DNS部署进化的变化。

所有DNS解析器收到的DNS回答都作为不受信任的输入对待，并接受安全和正确性检查。
然而，协议不一致可能会导致意外行为。如果这种意外行为仅限于托管在不符合标准
的服务器上的DNS域，则 *在BIND中* 不认为是安全问题。

.. _file_permissions:

.. _access_Control_Lists:

访问控制表
--------------------

访问控制表（Access Control Lists，ACL）是地址匹配表，你可以建立并命名，
以备以后用于 :any:`allow-notify` ， :any:`allow-query` ，
:any:`allow-query-on` ， :any:`allow-recursion` ， :any:`blackhole` ，
:any:`allow-transfer` ， :any:`match-clients` 等语句中。

ACL允许对谁能够访问名字服务器有一个更精细的控制，而不会用巨大的IP地址
表将配置文件搞混乱。

使用ACL并控制对你的服务器的访问是一个 **好主意** 。限制外来者访问你的服
务器可以帮助阻止对你的服务器的欺骗和拒绝服务（DoS）攻击。

访问控制表根据三个特征来匹配客户端：1) 客户端的IP地址； 2) 用于签名请
求的TSIG或SIG(0)密钥，如果有的话；和 3) 编码在一个EDNS客户端子网选项
中的一个地址前缀，如果有的话。

这是一个基于客户端地址的ACL的例子：

::

   // Set up an ACL named "bogusnets" that blocks
   // RFC1918 space and some reserved space, which is
   // commonly used in spoofing attacks.
   acl bogusnets {
       0.0.0.0/8;  192.0.2.0/24; 224.0.0.0/3;
       10.0.0.0/8; 172.16.0.0/12; 192.168.0.0/16;
   };

   // Set up an ACL called our-nets. Replace this with the
   // real IP numbers.
   acl our-nets { x.x.x.x/24; x.x.x.x/21; };
   options {
     ...
     ...
     allow-query { our-nets; };
     allow-recursion { our-nets; };
     ...
     blackhole { bogusnets; };
     ...
   };

   zone "example.com" {
     type primary;
     file "m/example.com";
     allow-query { any; };
   };

这将允许来自任何地址对 ``example.com`` 的权威请求，但是只有指定的网络
``our-nets`` 才能进行递归请求，并且指定网络 ``bogusnets`` 中的任何请
求都被禁止。

除了网络地址和前缀，这些与DNS请求中的源地址比对，之外，ACL也可包含
``key`` 元素，这是指定一个TSIG或者SIG(0)密钥的名字。

当BIND 9构建时带有GeoIP支持，ACL也可用于地理访问限制。这是通过指定一
个如下形式的ACL元素完成的： ``geoip db database field value`` 。

``field`` 指定在一个匹配中搜索哪个字段。可用的字段是 ``country`` ，
``region`` ， ``city`` ， ``continent`` ， ``postal`` （邮政编码），
``metro`` （城区编码）， ``area`` （区域编码）， ``tz`` （时区），
``isp`` ， ``asnum`` 和 ``domain`` 。

``value`` 是要在数据库中搜索的值，字符串需要用引号引上，如果其中包含
空格或其它特殊字符。一个对自治系统号的搜索 ``asnum`` 可以使用字符串
``ASNNNN`` 或整数NNNN来指定。当一个 ``country`` 搜索由两个字符的字符
串所指定时，它必须是一个标准的ISO-3166-1两字符国家码；否则，它被解释成
国家的全名。类似的，如果搜索条目是 ``region`` 并且字符串是两个字符，
它被当成一个州或者省的标准两字母；否则它被当成州或省的全名。

:any:`database` 字段指定在一个匹配中搜索哪个GeoIP数据库。大多数情况下，
这不是必须的，因为大多数搜索字段仅能在一个数据库中找到。然而，对
``continent`` 或 ``country`` 的搜索可以从 ``city`` 或 ``country`` 数
据库中得到回答，所以对于这些搜索类型，指定一个 :any:`database` 将强制
请求只从那个数据库，而不能是其它的数据库，得到回答。如果未指定
:any:`database` ，这些请求就将首先从 ``city`` 数据库得到回答，如果它被
安装了，然后从 ``country`` 数据库得到回答，如果它被安装了。有效的数
据库名字是 ``country`` ， ``city`` ， ``asnum`` ， ``isp`` 和
``domain`` 。

一些GeoIP ACL的例子：

::

   geoip country US;
   geoip country JP;
   geoip db country country Canada;
   geoip region WA;
   geoip city "San Francisco";
   geoip region Oklahoma;
   geoip postal 95062;
   geoip tz "America/Los_Angeles";
   geoip org "Internet Systems Consortium";

ACL使用一个“首先匹配”逻辑，而不是“最佳匹配”；如果一个地址前缀与一个
ACL元素匹配，则这个ACL就被认为匹配成立，即使一个稍后的元素将会匹配得
更准确。例如，ACL ``{ 10/8; !10.0.0.1; }`` 实际将会匹配来自10.0.0.1
的请求，因为第一个元素表明请求应该被接受，第二个元素就被忽略。

当使用“嵌套”ACL时（即，ACL包含或者被包含于其它ACL），一个嵌套ACL的否
定匹配将导致外部ACL继续查找以成功匹配。这使得可以构造复杂的ACL，在其
中，多个客户端特性可以被同时检查。例如，要构造一个允许仅来自一个特定
网络 **并且** 仅当其被一个特定密钥签名的一个请求的ACL，使用：

::

   allow-query { !{ !10/8; any; }; key example; };

在嵌套ACL中，任何 **不在** 10/8网络前缀中的地址都会被拒绝，这会终止ACL
的处理过程。任何 **在** 10/8网络前缀中的地址会被接受，但是这导致此嵌套
ACL的一个否定匹配，所以外部ACL继续处理。如果请求被密钥 ``example``
签名，它将被接受，否则将被拒绝。这样，这个ACL仅在 **两个** 条件都为真
时匹配。

.. _chroot_and_setuid:

``Chroot`` 和 ``Setuid``
-------------------------

在UNIX服务器上，可以通过为 :iscman:`named` 设定
:option:`-t <named -t>` 选项使BIND运行在
**chroot的** 环境中（使用 ``chroot()`` 函数）。这可以帮助增进系统的安
全性，它通过将BIND放入一个“沙箱”，后者将在服务器遇到危险时把损坏限制
在一个局部范围内。

Unix版本的BIND的另外一个能力是作为一个非特权用户（
:option:`-u <named -u>` user）身份
运行服务。我们建议在使用 ``chroot`` 特征时以一个非特权用户身份运行。

这里是有个命令行的例子，即将BIND加载到一个 ``chroot`` 沙箱，
``/var/named`` ，并且通过 ``setuid`` 以用户202的身份运行 :iscman:`named` ：

``/usr/local/sbin/named -u 202 -t /var/named``

.. _chroot:

``chroot`` 环境
~~~~~~~~~~~~~~~~~

为了让一个 ``chroot`` 环境在一个特定目录（例如， ``/var/named`` ）中正
常工作，环境必须包含BIND运行所需的所有东西。从BIND的视角，
``/var/named`` 是文件系统的根；必须调整像 :any:`directory` 和
:any:`pid-file` 这样的选项的值来满足这个需求。

与BIND的早期版本不同，典型地， **不** 需要静态地编译 :iscman:`named` ，
也不需要在新的根下面安装共享库。然而，依赖于操作系统，可能需要设置诸如
这样的路径： ``/dev/zero`` ， ``/dev/random`` ， ``/dev/log`` 以及
``/etc/localtime`` 。

.. _setuid:

使用 ``setuid`` 函数
~~~~~~~~~~~~~~~~~~~~~

在运行 :iscman:`named` 服务之前，在BIND要写的文件上使用 ``touch`` 应用程序
（改变文件访问和修改时间）或者 ``chown`` 应用程序（设置用户id和/或组
id）。

.. note::

   如果 :iscman:`named` 后台进程是以一个非特权用户身份运行的，如果服务器重
   新加载，它将不能够绑定到新的受限端口上。

.. _dynamic_update_security:

动态更新的安全
-----------------------

应该严格限制对动态更新设施的访问。在早期的BIND版本中，仅有的方法是基
于请求进行动态更新的主机的IP地址，通过在 :any:`allow-update` 区选项中列
出一个IP地址或者网络前缀来实现。由于更新UDP包的源地址非常容易伪造，
这个方法是不安全的。另外要注意的是，如果 :any:`allow-update` 选项中所允
许的地址包含一个可以执行转发动态更新的辅服务器的IP地址，主服务器将可
能遭受到很简单的攻击，即通过发送更新到辅服务器，辅服务器使用自己的地
址作源地址将其转发到主服务器 - 使主服务器毫无怀疑地接受。

由于这些原因，我们强烈推荐通过事务签名（TSIG）来加密和认证所进行的更
新。这就是说， :any:`allow-update` 选项仅应该列出TSIG密钥名，而不是IP地
址或网络前缀。作为另外的选择，也可以使用 :any:`update-policy` 选项。

一些站点选择将所有的动态更新的DNS数据保存到一个子域并将子域授权到一
个单独的区。在这种方法中，包含像公共web和邮件服务器的IP地址这样的关
键数据的顶级区就完全不允许对其进行动态更新。

.. _sec_file_transfer:

.. _dns_over_tls:
